force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <description>INT-006 — per-wizard-step staging record for the Patient Portal onboarding wizard. Persisted so a patient can resume mid-flow.</description>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>ONB-{00000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboardings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>