force-app/main/default/objects/Onboarding__c/fields/Prefill_Error__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Error__c</fullName>
    <description>INT-021 — short error summary when Prefill_Status__c = Failed.</description>
    <label>Prefill Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>