force-app/main/default/objects/Onboarding__c/fields/Prefill_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Response_JSON__c</fullName>
    <description>INT-021 — raw JSON returned by the HIC prefill callout.</description>
    <label>Prefill Response JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>