force-app/main/default/objects/Onboarding__c/fields/Prefill_Status__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Status__c</fullName>
    <description>INT-021 — status of the HIC prefill callout for this Onboarding.</description>
    <label>Prefill Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>