force-app/main/default/objects/Onboarding__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Current Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Identity</fullName><default>true</default><label>Identity</label></value>
            <value><fullName>Address</fullName><default>false</default><label>Address</label></value>
            <value><fullName>Language</fullName><default>false</default><label>Language</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Summary</fullName><default>false</default><label>Summary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>